# Discrete-Math-Labs

course 1/lab2/4A.xcworkspace/: contents.xcworkspacedata
course 1/netcheck-G/netcheck-G/: main.cpp  netcheck_G.1
course 1/netcheck-G/netcheck-G.xcodeproj/: project.pbxproj
course 2/lab10/: CMakeLists.txt  main.cpp
course 2/lab4/: CMakeLists.txt  b.cpp  c.cpp  d.cpp  e.cpp  euler.out  main.cpp
course 2/lab5/: CMakeLists.txt  a.cpp  b.cpp  decomposition.out  lab5  lab5_b
course 2/lab6/: CMakeLists.txt  b.cpp  c.cpp  d.cpp  diff  diff_eq.cpp  eyler.out  lab6  lab6_b  lab6_c  lab6_d  main.cpp  minimax.in  multiassignment.in  multiassignment.out  rgk.out
course 2/lab7/: CMakeLists.txt  b.cpp  d.cpp  e.cpp  f.cpp  g.cpp  lab7  lab7_b  lab7_d  lab7_e  lab7_f  lab7_g  main.cpp  search3.in  search4.in
course 2/lab7/lab7.dSYM/Contents/Resources/DWARF/: lab7
course 2/lab7/lab7_b.dSYM/Contents/: Info.plist
course 2/lab7/lab7_b.dSYM/Contents/Resources/DWARF/: lab7_b
course 2/lab7/lab7_e.dSYM/Contents/: Info.plist
course 2/lab7/lab7_e.dSYM/Contents/Resources/DWARF/: lab7_e
course 2/lab7/lab7_f.dSYM/Contents/: Info.plist
course 2/lab7/lab7_f.dSYM/Contents/Resources/DWARF/: lab7_f
course 2/lab7/lab7_g.dSYM/Contents/: Info.plist
course 2/lab7/lab7_g.dSYM/Contents/Resources/DWARF/: lab7_g
course 2/lab8/: CMakeLists.txt  b.cpp  c.cpp  e.cpp  f.cpp  g.cpp  lab8  lab8_b  lab8_c  lab8_e  lab8_f  lab8_g  main.cpp  refrain.in
course 2/lab9/: CMakeLists.txt  a.cpp  c.cpp  d.cpp  e.cpp  lab9  lab9_a  lab9_e
course 3/EvolutionComputationsLab/: antTest10.in
(+312 files in other folders)
